# anyframe-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml
docs/: .gitignore  README.md
docs/source/: index.html.md
docs/source/javascripts/: all_nosearch.js
docs/source/javascripts/app/: _copy.js  _fleet.js  _toc.js
docs/source/layouts/: layout.erb
docs/source/stylesheets/: _anyframe.scss  _variables.scss  screen.css.scss
src/anyframe/: __init__.py  _http.py  _sse.py  _version.py  agents.py  async_client.py  attention.py  client.py  connectors.py  credentials.py  credits.py  exceptions.py  integrations.py  models.py  orgs.py  sessions.py  templates.py  tokens.py
tests/: conftest.py  payloads.py  test_agent_subresources.py  test_agents.py  test_async_client.py  test_attention.py  test_builds.py  test_client.py  test_connector_catalog.py  test_connectors.py  test_credentials.py  test_credits.py  test_exceptions.py  test_http.py  test_integrations.py  test_me.py  test_models.py  test_orgs.py  test_session_chat.py  test_session_collab.py  test_session_previews.py  test_session_serve.py  test_sessions.py  test_sse.py  test_templates.py  test_tokens.py  test_version.py
