[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyframe"
version = "2.0.0"
description = "Official Python SDK for the AnyFrame control plane."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AnyFrame" }]
keywords = ["anyframe", "ai", "agents", "sandbox", "claude", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://anyfrm.com"
Documentation = "https://docs.anyfrm.com"
Repository = "https://github.com/tinyhq/anyframe-python"
Issues = "https://github.com/tinyhq/anyframe-python/issues"
Changelog = "https://github.com/tinyhq/anyframe-python/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "python-semantic-release>=9.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anyframe"]

[tool.hatch.build.targets.sdist]
include = ["src/anyframe", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
markers = [
    "integration: hits a real AnyFrame control plane; skipped without ANYFRAME_API_KEY",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "TCH",  # type-checking blocks
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length is handled by formatter
    "B008",  # function-call defaults are fine for our resource pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]  # pytest.raises(Exception) is fine in tests
# Pydantic models need their type imports at runtime to build validators,
# even under `from __future__ import annotations`.
"src/anyframe/models.py" = ["TC003"]
# These resource modules import ``builtins`` at runtime on purpose so that
# ``typing.get_type_hints()`` can resolve ``builtins.list[T]`` in our
# annotations (used to disambiguate from the resources' own ``list()`` method).
"src/anyframe/agents.py" = ["TC003"]
"src/anyframe/attention.py" = ["TC003"]
"src/anyframe/connectors.py" = ["TC003"]
"src/anyframe/integrations.py" = ["TC003"]
"src/anyframe/orgs.py" = ["TC003"]
"src/anyframe/templates.py" = ["TC003"]
"src/anyframe/sessions.py" = ["TC003"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["src/anyframe"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.semantic_release]
version_variables = ["src/anyframe/_version.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false           # uv publish handles upload in CI
upload_to_release = true
build_command = "uv build"
commit_parser = "conventional"
major_on_zero = false            # while in 0.x, breaking changes bump minor

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "test", "chore", "build", "ci", "style"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
